--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Navigation Desktop -->
       <nav class="hidden md:flex space-x-8">
         <a href="#hero" class="nav-link text-gray-800 hover:text-[var(--red)] font-medium">Accueil</a>
-        <a href="#conciergerie" class="nav-link text-gray-800 hover:text-[var(--red)] font-medium">Conciergerie</a>
+        <a href="#conciergerie" class="nav-link text-gray-800 hover:text-[var(--red)] font-medium">Nos pépites</a>
         <a href="#conseil" class="nav-link text-gray-800 hover:text-[var(--red)] font-medium">Conseil</a>
         <a href="#temoignages" class="nav-link text-gray-800 hover:text-[var(--red)] font-medium">Témoignages</a>
         <a href="#contact" class="nav-link text-gray-800 hover:text-[var(--red)] font-medium">Contact</a>
@@ -80,7 +80,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
       <a href="#hero" class="block py-2 text-gray-800 hover:text-[var(--red)]">Accueil</a>
-      <a href="#conciergerie" class="block py-2 text-gray-800 hover:text-[var(--red)]">Conciergerie</a>
+      <a href="#conciergerie" class="block py-2 text-gray-800 hover:text-[var(--red)]">Nos pépites</a>
       <a href="#conseil" class="block py-2 text-gray-800 hover:text-[var(--red)]">Conseil</a>
       <a href="#temoignages" class="block py-2 text-gray-800 hover:text-[var(--red)]">Témoignages</a>
       <a href="#contact" class="block py-2 text-gray-800 hover:text-[var(--red)]">Contact</a>
@@ -91,7 +91,7 @@
   <section id="hero" class="hero-bg min-h-screen flex items-center pt-24">
     <div class="container mx-auto px-6 py-20 text-center">
       <div class="max-w-3xl mx-auto animate-slide">
-        <h1 class="text-4xl md:text-6xl font-bold text-[var(--red)] mb-6 font-title">Le Combat des Coqs de la Location Saisonnière en Martinique</h1>
+        <h1 class="text-4xl md:text-6xl font-bold text-[var(--red)] mb-6 font-title">Rentrez dans l'arène de la location saisonnière</h1>
         <p class="text-xl md:text-2xl text-gray-700 mb-10">Dominez le marché compétitif avec élégance et stratégie</p>
         <div class="flex flex-col sm:flex-row justify-center gap-4">
           <a href="#conciergerie" class="btn bg-[var(--red)] text-white px-8 py-3 rounded-full font-medium transition-all hover:bg-[var(--dark-red)]">Explorer nos Villas</a>
@@ -111,9 +111,9 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
         <!-- Villa 1 -->
         <div class="villa-card bg-white rounded-lg overflow-hidden shadow-lg transform transition-all hover:-translate-y-1 hover:shadow-xl animate-slide" style="animation-delay: 0.1s;">
-          <img src="https://a0.muscache.com/im/pictures/miso/Hosting-46155129/original/2c5c5b7c-2a5a-4c5b-9a5f-5e5c5b7c2a5a.jpeg" alt="Villa de luxe" class="w-full h-64 object-cover">
+          <img src="https://a0.muscache.com/im/pictures/miso/Hosting-54044418/original/b98cc4f6-0d78-44a8-9e89-dfb52c28e4af.jpeg?im_w=720" alt="Villa de luxe" class="w-full h-64 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-bold text-gray-800 mb-2">Villa Anse Mitan - Vue Panoramique</h3>
+            <h3 class="text-xl font-bold text-gray-800 mb-2">Magnifique villa avec piscine vue sur mer - Vue Panoramique</h3>
             <div class="flex items-center mb-3">
               <div class="flex text-yellow-400">
                 <i class="fas fa-star"></i>
@@ -122,20 +122,20 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
               </div>
-              <span class="ml-2 text-gray-600">4.95 (42 avis)</span>
+              <span class="ml-2 text-gray-600">4.92 (52 avis)</span>
             </div>
-            <p class="text-gray-600 mb-4">Villa exceptionnelle avec piscine à débordement et vue imprenable sur la baie de Fort-de-France.</p>
+            <p class="text-gray-600 mb-4">Villa d’Exception avec Vue Mer et Piscine et Jacuzzi</p>
             <div class="flex justify-between items-center">
-              <span class="text-[var(--red)] font-bold">À partir de 380€/nuit</span>
+              <span class="text-[var(--red)] font-bold">À partir de 320€/nuit</span>
               <a href="https://www.airbnb.fr/rooms/46155129" target="_blank" class="text-[var(--red)] hover:underline">Voir plus →</a>
             </div>
           </div>
         </div>
         <!-- Villa 2 -->
         <div class="villa-card bg-white rounded-lg overflow-hidden shadow-lg transform transition-all hover:-translate-y-1 hover:shadow-xl animate-slide" style="animation-delay: 0.2s;">
-          <img src="https://images.unsplash.com/photo-1582719471377-44e5b1644ee5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Villa de luxe" class="w-full h-64 object-cover">
+          <img src="Images\villa caycli 1.jpg" alt="Villa de luxe" class="w-full h-64 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-bold text-gray-800 mb-2">Villa Anse Diamant</h3>
+            <h3 class="text-xl font-bold text-gray-800 mb-2">Villa d’Exception avec Vue Mer et Piscine et Jacuzzi</h3>
             <div class="flex items-center mb-3">
               <div class="flex text-yellow-400">
                 <i class="fas fa-star"></i>
@@ -144,20 +144,20 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
               </div>
-              <span class="ml-2 text-gray-600">4.92 (87 avis)</span>
+              <span class="ml-2 text-gray-600">4.89 (36 avis)</span>
             </div>
             <p class="text-gray-600 mb-4">Architecture contemporaine avec accès privé à la plage, un véritable atout sur le marché.</p>
             <div class="flex justify-between items-center">
-              <span class="text-[var(--red)] font-bold">À partir de 420€/nuit</span>
+              <span class="text-[var(--red)] font-bold">À partir de 320€/nuit</span>
               <a href="#" class="text-[var(--red)] hover:underline">Voir plus →</a>
             </div>
           </div>
         </div>
         <!-- Villa 3 -->
         <div class="villa-card bg-white rounded-lg overflow-hidden shadow-lg transform transition-all hover:-translate-y-1 hover:shadow-xl animate-slide" style="animation-delay: 0.3s;">
-          <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Villa de luxe" class="w-full h-64 object-cover">
+          <img src="https://a0.muscache.com/im/pictures/6323d5b8-83c2-43bf-ae92-09062a73a610.jpg?im_w=720" alt="Appartement de standing" class="w-full h-64 object-cover">
           <div class="p-6">
-            <h3 class="text-xl font-bold text-gray-800 mb-2">Villa Les Trois-Îlets</h3>
+            <h3 class="text-xl font-bold text-gray-800 mb-2">Appartement de haut standing avec Piscine à Sainte Luce</h3>
             <div class="flex items-center mb-3">
               <div class="flex text-yellow-400">
                 <i class="fas fa-star"></i>
@@ -170,14 +170,14 @@
             </div>
             <p class="text-gray-600 mb-4">Jardin tropical luxuriant et intérieur raffiné pour une expérience inoubliable.</p>
             <div class="flex justify-between items-center">
-              <span class="text-[var(--red)] font-bold">À partir de 390€/nuit</span>
+              <span class="text-[var(--red)] font-bold">À partir de 240€/nuit</span>
               <a href="#" class="text-[var(--red)] hover:underline">Voir plus →</a>
             </div>
           </div>
         </div>
       </div>
       <div class="text-center animate-fade">
-        <a href="#" class="btn bg-[var(--red)] text-white px-8 py-3 rounded-full font-medium transition-all hover:bg-[var(--dark-red)] inline-block">Découvrez l'expérience de nos Villas</a>
+        <a href="#" class="btn bg-[var(--red)] text-white px-8 py-3 rounded-full font-medium transition-all hover:bg-[var(--dark-red)] inline-block">Découvrez comment rendre votre expérience inoubliable</a>
       </div>
     </div>
   </section>
@@ -237,7 +237,7 @@
         </div>
       </div>
       <div class="text-center animate-fade">
-        <a href="#contact" class="btn bg-[var(--red)] text-white px-8 py-3 rounded-full font-medium transition-all hover:bg-[var(--dark-red)] inline-block animate-pulse">Révélez le champion de votre location</a>
+        <a href="#contact" class="btn bg-[var(--red)] text-white px-8 py-3 rounded-full font-medium transition-all hover:bg-[var(--dark-red)] inline-block animate-pulse">Démarquez vous de la compétition</a>
       </div>
     </div>
   </section>
