--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
             <p class="text-gray-600 mb-4">Villa d’Exception avec Vue Mer et Piscine et Jacuzzi</p>
             <div class="flex justify-between items-center">
               <span class="text-[var(--red)] font-bold">À partir de 320€/nuit</span>
-              <a href="https://www.airbnb.fr/rooms/46155129" target="_blank" class="text-[var(--red)] hover:underline">Voir plus →</a>
+              <a href="https://www.airbnb.fr/rooms/54044418" target="_blank" class="text-[var(--red)] hover:underline">Voir plus →</a>
             </div>
           </div>
         </div>
         <!-- Villa 2 -->
         <div class="villa-card bg-white rounded-lg overflow-hidden shadow-lg transform transition-all hover:-translate-y-1 hover:shadow-xl animate-slide" style="animation-delay: 0.2s;">
-          <img src="Images\villa caycli 1.jpg" alt="Villa de luxe" class="w-full h-64 object-cover">
+          <img src="https://a0.muscache.com/im/pictures/b6cc401f-047e-4f20-8d05-af192513b41f.jpg?im_w=720" alt="Villa de luxe" class="w-full h-64 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-bold text-gray-800 mb-2">Villa d’Exception avec Vue Mer et Piscine et Jacuzzi</h3>
             <div class="flex items-center mb-3">
@@ -149,7 +149,7 @@
             <p class="text-gray-600 mb-4">Architecture contemporaine avec accès privé à la plage, un véritable atout sur le marché.</p>
             <div class="flex justify-between items-center">
               <span class="text-[var(--red)] font-bold">À partir de 320€/nuit</span>
-              <a href="#" class="text-[var(--red)] hover:underline">Voir plus →</a>
+              <a href="https://www.airbnb.fr/rooms/46155129" class="text-[var(--red)] hover:underline">Voir plus →</a>
             </div>
           </div>
         </div>
